# poetry-alias-plugin

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  readme.md  tox.ini
poetry_aliases_plugin/: __main__.py  aliases.py  commands.py  config.py  plugin.py  plugin_commands.py  triggers.py  utils.py
